--- a/src/GIMI-ModManager.WinUI/Strings/zh-cn/Resources.resw
+++ b/src/GIMI-ModManager.WinUI/Strings/zh-cn/Resources.resw
@@ -132,17 +132,75 @@
   <data name="Startup3.Text" xml:space="preserve">
     <value>在使用与您的文件交互的应用程序之前，备份您的文件/模组总是一个好主意。</value>
   </data>
-<data name="Startup/Tooltip1.Text1" xml:space="preserve">
+  <data name="Startup/Tooltip1.Text1" xml:space="preserve">
     <value>启用此选项将提示应用程序将现有的模组按其各自角色分配的文件夹进行排序。任何无法合理匹配的模组将放入“其他”文件夹。</value>
-</data>
-<data name="Startup/Tooltip2.Text" xml:space="preserve">
+  </data>
+  <data name="Startup/Tooltip2.Text" xml:space="preserve">
     <value>一个包含多个角色名称的模组文件夹可能会错误地移到一个角色的目录中。</value>
-</data>
-<data name="Startup/Tooltip3.Text" xml:space="preserve">
+  </data>
+  <data name="Startup/Tooltip3.Text" xml:space="preserve">
     <value>这可以在设置页面中稍后激活。</value>
-</data>
-<data name="Startup_Title.Text" xml:space="preserve">
+  </data>
+  <data name="Startup_Title.Text" xml:space="preserve">
     <value>首次启动</value>
     <comment>启动页面的页面标题</comment>
+  </data>
+  <data name="Settings_About.Text" xml:space="preserve">
+    <value>关于此应用程序</value>
+  </data>
+  <data name="Settings_AboutDescription.Text" xml:space="preserve">
+    <value>JASM的目标是使组织大量皮肤模组变得更容易</value>
+  </data>
+  <data name="Settings_ComboBox_Header.Text" xml:space="preserve">
+    <value>选择显示语言：</value>
+  </data>
+  <data name="Settings_Language_TexBlock.Text" xml:space="preserve">
+    <value>语言选项目前有限。这是一个正在进行中的工作。这是由ChatGPT翻译的。</value>
+  </data>
+  <data name="Settings_Personalization.Text" xml:space="preserve">
+    <value>个性化</value>
+  </data>
+  <data name="Settings_Theme.Text" xml:space="preserve">
+    <value>主题</value>
+  </data>
+  <data name="Settings_Theme_Dark.Content" xml:space="preserve">
+    <value>深色</value>
+  </data>
+  <data name="Settings_Theme_Default.Content" xml:space="preserve">
+    <value>默认</value>
+  </data>
+  <data name="Settings_Theme_Light.Content" xml:space="preserve">
+    <value>浅色</value>
+  </data>
+  <data name="Settings_Title.Text" xml:space="preserve">
+    <value>设置</value>
+    <comment>设置页面的页面标题</comment>
+  </data>
+<data name="Settings_ExportDialog.Text" xml:space="preserve">
+    <value>这将导出JASM管理的所有模组到您选择的导出文件夹。模组将被复制到导出文件夹，而不会从原始文件夹中删除。</value>
 </data>
+<data name="Settings_ExportDialogButtons.CloseButtonText" xml:space="preserve">
+    <value>取消</value>
+</data>
+<data name="Settings_ExportDialogButtons.PrimaryButtonText" xml:space="preserve">
+    <value>导出</value>
+</data>
+<data name="Settings_ExportDialog_ChangeStatus.Text" xml:space="preserve">
+    <value>更改导出的模组状态</value>
+</data>
+<data name="Settings_ExportDialog_KeepStructure.Text" xml:space="preserve">
+    <value>在导出文件夹中保留CharacterName/Mods的文件夹结构</value>
+</data>
+<data name="Settings_ExportDialog_RemoveJasm.Text" xml:space="preserve">
+    <value>从导出的模组中移除JASM配置文件</value>
+</data>
+<data name="Settings_Export_Button.Text" xml:space="preserve">
+    <value>导出模组</value>
+</data>
+<data name="Settings_Export_Title.Text" xml:space="preserve">
+    <value>导出/备份模组</value>
+</data>
+  <data name="Settings_Language.Text" xml:space="preserve">
+    <value>语言</value>
+  </data>
 </root>
