--- a/src/GIMI-ModManager.WinUI/Strings/en-us/Resources.resw
+++ b/src/GIMI-ModManager.WinUI/Strings/en-us/Resources.resw
@@ -124,10 +124,10 @@
     <value>JASM - Just Another Skin Manager</value>
   </data>
   <data name="Startup1.Text" xml:space="preserve">
-    <value>As part of the first time setup you will need to select Genshin-Impact-Model-Importer (GIMI) folder and its connected Mods folder. The GIMI/3dmigoto folder contains 3DMigoto Loader.exe and a Mods folder. If you have not set up GIMI yet, please do so now, see link below. I find most mods on Gamebanana but Nexusmods also has some.</value>
+    <value>As part of the first time setup you will need to select a Model-Importer folder (3dmigoto) and its connected Mods folder. The 3dmigoto folder contains 3DMigoto Loader.exe/3DMigotoLoader.exe and a Mods folder. If you have not set up the model importer yet, please do so now, see link below. I find most mods on Gamebanana but Nexusmods also has some.</value>
   </data>
   <data name="Startup2.Text" xml:space="preserve">
-    <value>Once the settings are saved the application will create a mod folder for each character within the Mods folder. This application enables and disables mods by prefixing mod folders with 'DISABLED_'.  JASM also supports exporting Mods managed by it if you wish to use them with other applications.</value>
+    <value>Once the settings are saved the application will create a folder for each character within the 'Mods' folder. Mod folders outside of these character folders are ignored. This application enables and disables mods by prefixing mod folders with 'DISABLED_'.  JASM also supports exporting Mods managed by it if you wish to use them with other applications.</value>
   </data>
   <data name="Startup3.Text" xml:space="preserve">
     <value>It is always a good idea to backup your files/mods before using applications that interact with your files</value>
