Added enum translations

--- a/src/GIMI-ModManager.WinUI/Strings/zh-cn/Resources.resw
+++ b/src/GIMI-ModManager.WinUI/Strings/zh-cn/Resources.resw
@@ -209,4 +209,10 @@
   <data name="Waiting" xml:space="preserve">
     <value>等待</value>
   </data>
+  <data name="Error" xml:space="preserve">
+    <value>错误</value>
+  </data>
+  <data name="Running" xml:space="preserve">
+    <value>运行中</value>
+  </data>
 </root>
