--- a/src/GIMI-ModManager.WinUI/Strings/ru-ru/Resources.resw
+++ b/src/GIMI-ModManager.WinUI/Strings/ru-ru/Resources.resw
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Error" xml:space="preserve">
+    <value>Ошибка</value>
+  </data>
+  <data name="Running" xml:space="preserve">
+    <value>Запущен</value>
+  </data>
   <data name="Stopped" xml:space="preserve">
     <value>Отключена</value>
   </data>
