--- a/src/GIMI-ModManager.WinUI/Strings/en-us/Resources.resw
+++ b/src/GIMI-ModManager.WinUI/Strings/en-us/Resources.resw
@@ -125,12 +125,15 @@
   </data>
   <data name="Startup1.Text" xml:space="preserve">
     <value>As part of the first time setup you will need to select a Model-Importer folder (3dmigoto) and its connected Mods folder. The 3dmigoto folder contains 3DMigoto Loader.exe/3DMigotoLoader.exe and a Mods folder. If you have not set up the model importer yet, please do so now, see link below. I find most mods on Gamebanana but Nexusmods also has some.</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Startup2.Text" xml:space="preserve">
     <value>Once the settings are saved the application will create a folder for each character within the 'Mods' folder. Mod folders outside of these character folders are ignored. This application enables and disables mods by prefixing mod folders with 'DISABLED_'.  JASM also supports exporting Mods managed by it if you wish to use them with other applications.</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Startup3.Text" xml:space="preserve">
     <value>It is always a good idea to backup your files/mods before using applications that interact with your files</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="ShellMenuItem_Views_Main.Text" xml:space="preserve">
     <value>Main</value>
@@ -144,7 +147,7 @@
   </data>
   <data name="Startup_Title.Text" xml:space="preserve">
     <value>First time startup</value>
-    <comment>Page title for StartupPage</comment>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Settings_Personalization.Text" xml:space="preserve">
     <value>Personalization</value>
@@ -163,6 +166,7 @@
   </data>
   <data name="Settings_AboutDescription.Text" xml:space="preserve">
     <value>The goal of JASM is to make it easy to organize a larger amount of skin mods</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="SettingsPage_PrivacyTermsLink.Content" xml:space="preserve">
     <value>Privacy Statement</value>
@@ -179,42 +183,55 @@
   </data>
   <data name="Startup/Tooltip1.Text" xml:space="preserve">
     <value>Enabling this option will prompt the application to sort existing mods into folders assigned to their respective characters. Any mods that can't be reasonably matched will be placed in an 'Others' folder.</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Startup/Tooltip2.Text" xml:space="preserve">
     <value>A mod folder containing multiple character names may be wrongly moved to a character's directory. This assumes a flat mod structure, where skin folders are loosely stored in the mods folder. If you have a custom folder structure, there is a high chance that JASM will incorrectly identify your skins. This also the case if you have nested folders with skins inside of them.</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Startup/Tooltip3.Text" xml:space="preserve">
     <value>This can be activated later in the settings page.</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Settings_About.Text" xml:space="preserve">
     <value>About this application</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Settings_ComboBox_Header.Text" xml:space="preserve">
     <value>Select Display Language:</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Settings_ExportDialog.Text" xml:space="preserve">
     <value>This will export all mods that JASM is managing to a an export folder of your choice. The mods will be copied to the export folder and will not be removed from the original folder.</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Settings_ExportDialogButtons.CloseButtonText" xml:space="preserve">
     <value>Cancel</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Settings_ExportDialogButtons.PrimaryButtonText" xml:space="preserve">
     <value>Export</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Settings_ExportDialog_ChangeStatus.Text" xml:space="preserve">
     <value>Change status of exported mods</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Settings_ExportDialog_KeepStructure.Text" xml:space="preserve">
     <value>Keep folder structure of CharacterName/Mods in export folder</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Settings_ExportDialog_RemoveJasm.Text" xml:space="preserve">
     <value>Removes JASM configuration files from the exported Mods</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Settings_Export_Button.Text" xml:space="preserve">
     <value>Export Mods</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Settings_Export_Title.Text" xml:space="preserve">
     <value>Export/Backup Mods</value>
+    <comment>[No longer in use]</comment>
   </data>
   <data name="Settings_Language.Text" xml:space="preserve">
     <value>Language</value>
